--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "angular-datepicker": "~1.0.3",
     "font-awesome": "~4.2.0",
     "wavesurfer.js": "~1.0.7",
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "modernizr-load": "*"
   }
 }
